// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly 1`] = `
<div
  align={null}
  className="o-grid u-text"
  full={false}
  huge={null}
  large={null}
  medium={null}
  noGutter={false}
  small={null}
  wrap={false}
  xlarge={null}
  xsmall={null}
>
  lorem
</div>
`;

exports[`Grid renders correctly with full width children 1`] = `
<div
  align={null}
  className="o-grid u-text o-grid--full"
  full={true}
  huge={null}
  large={null}
  medium={null}
  noGutter={false}
  small={null}
  wrap={false}
  xlarge={null}
  xsmall={null}
>
  <Cell
    align={null}
    className={null}
    fixedWidth={false}
    huge={null}
    large={null}
    medium={null}
    noGutter={false}
    offset={null}
    small={null}
    width={null}
    xlarge={null}
    xsmall={null}
  >
    lorem
  </Cell>
  <Cell
    align={null}
    className={null}
    fixedWidth={false}
    huge={null}
    large={null}
    medium={null}
    noGutter={false}
    offset={null}
    small={null}
    width={null}
    xlarge={null}
    xsmall={null}
  >
    ipsum
  </Cell>
</div>
`;

exports[`Grid renders correctly with responsive props 1`] = `
<div
  align={null}
  className="o-grid u-text o-grid--xsmall-fit o-grid--small-full o-grid--medium-fit o-grid--large-full o-grid--xlarge-fit o-grid--super-full"
  full={false}
  huge="full"
  large="full"
  medium="fit"
  noGutter={false}
  small="full"
  wrap={false}
  xlarge="fit"
  xsmall="fit"
>
  <Cell
    align={null}
    className={null}
    fixedWidth={false}
    huge={null}
    large={null}
    medium={null}
    noGutter={false}
    offset={null}
    small={null}
    width={50}
    xlarge={null}
    xsmall={null}
  >
    lorem
  </Cell>
  <Cell
    align={null}
    className={null}
    fixedWidth={false}
    huge={null}
    large={null}
    medium={null}
    noGutter={false}
    offset={null}
    small={null}
    width={50}
    xlarge={null}
    xsmall={null}
  >
    ipsum
  </Cell>
</div>
`;

exports[`Grid renders correctly with wrapped children 1`] = `
<div
  align={null}
  className="o-grid u-text o-grid--wrap"
  full={false}
  huge={null}
  large={null}
  medium={null}
  noGutter={false}
  small={null}
  wrap={true}
  xlarge={null}
  xsmall={null}
>
  <Cell
    align={null}
    className={null}
    fixedWidth={false}
    huge={null}
    large={null}
    medium={null}
    noGutter={false}
    offset={null}
    small={null}
    width={50}
    xlarge={null}
    xsmall={null}
  >
    lorem
  </Cell>
  <Cell
    align={null}
    className={null}
    fixedWidth={false}
    huge={null}
    large={null}
    medium={null}
    noGutter={false}
    offset={null}
    small={null}
    width={66}
    xlarge={null}
    xsmall={null}
  >
    ipsum
  </Cell>
</div>
`;
